--- a/week4/docs/latex/gpio__lib_8h_source.tex
+++ b/week4/docs/latex/gpio__lib_8h_source.tex
@@ -19,13 +19,18 @@
 \DoxyCodeLine{00021\ \ \ \ \ tertiary}
 \DoxyCodeLine{00022\ \}\ purposeFunction;}
 \DoxyCodeLine{00023\ }
-\DoxyCodeLine{00024\ \textcolor{keywordtype}{void}\ pinSet(uint16\_t\ port,\ uint16\_t\ bit,\ \textcolor{keywordtype}{bool}\ val);\ \ \ \ \ \ \ \ \ \textcolor{comment}{//\ Set\ port.bit\ to\ val}}
-\DoxyCodeLine{00025\ \textcolor{keywordtype}{void}\ pinToggle(uint16\_t\ port,\ uint16\_t\ bit);\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{comment}{//\ Toggle\ port.bit}}
-\DoxyCodeLine{00026\ \textcolor{keywordtype}{bool}\ pinGet(uint16\_t\ port,\ uint16\_t\ bit);\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{comment}{//\ Get\ digital\ value\ of\ port.bit}}
-\DoxyCodeLine{00027\ \textcolor{keywordtype}{void}\ pinConfigInput(uint16\_t\ port,\ uint16\_t\ bit,\ \textcolor{keywordtype}{bool}\ pullResistor,\ \textcolor{keywordtype}{bool}\ pullUP,\ \textcolor{keywordtype}{bool}\ IES,\ \textcolor{keywordtype}{bool}\ IE);\ \ \ \ \textcolor{comment}{//\ Set\ pin\ configuration\ for\ port.bit}}
-\DoxyCodeLine{00028\ \textcolor{keywordtype}{void}\ pinSetDir(uint16\_t\ port,\ uint16\_t\ bit,\ \textcolor{keywordtype}{bool}\ val);\ \ \ \ \ \ \textcolor{comment}{//\ Set\ direction\ of\ port.bit\ to\ val}}
-\DoxyCodeLine{00029\ \textcolor{keywordtype}{void}\ pinConfigFunction(uint16\_t\ port,\ uint16\_t\ bit,\ purposeFunction\ pf);}
-\DoxyCodeLine{00030\ }
-\DoxyCodeLine{00031\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ GPIO\_LIB\_H\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00032\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{gpio__lib_8h_ae66a6b2ff7e28c7ad548379602587a37}{pinSet}}(uint16\_t\ port,\ uint16\_t\ bit,\ \textcolor{keywordtype}{bool}\ val);}
+\DoxyCodeLine{00033\ }
+\DoxyCodeLine{00041\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{gpio__lib_8h_a53002f7307d0d2722a9032eb77469871}{pinToggle}}(uint16\_t\ port,\ uint16\_t\ bit);}
+\DoxyCodeLine{00042\ }
+\DoxyCodeLine{00051\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{gpio__lib_8h_a454fc0135c24c1a3b8f478946278ef13}{pinGet}}(uint16\_t\ port,\ uint16\_t\ bit);}
+\DoxyCodeLine{00052\ }
+\DoxyCodeLine{00064\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{gpio__lib_8h_a2970bbcc57434a957a66869351cad983}{pinConfigInput}}(uint16\_t\ port,\ uint16\_t\ bit,\ \textcolor{keywordtype}{bool}\ pullResistor,\ \textcolor{keywordtype}{bool}\ pullUP,\ \textcolor{keywordtype}{bool}\ IES,\ \textcolor{keywordtype}{bool}\ IE);}
+\DoxyCodeLine{00065\ }
+\DoxyCodeLine{00074\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{gpio__lib_8h_aaeccba8a92806e32ee1373a599f69245}{pinSetDir}}(uint16\_t\ port,\ uint16\_t\ bit,\ \textcolor{keywordtype}{bool}\ val);}
+\DoxyCodeLine{00075\ }
+\DoxyCodeLine{00084\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{gpio__lib_8h_a595cfd868c4e9e152315346bae7689f7}{pinConfigFunction}}(uint16\_t\ port,\ uint16\_t\ bit,\ purposeFunction\ pf);}
+\DoxyCodeLine{00085\ }
+\DoxyCodeLine{00086\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ GPIO\_LIB\_H\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
