--- a/week4/docs/latex/files.tex
+++ b/week4/docs/latex/files.tex
@@ -1,4 +1,5 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{include/\mbox{\hyperlink{gpio__lib_8h}{gpio\+\_\+lib.\+h}} }{\pageref{gpio__lib_8h}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{led__matrix__lib_8h}{led\+\_\+matrix\+\_\+lib.\+h}} }{\pageref{led__matrix__lib_8h}}{}
 \end{DoxyCompactList}
