--- a/week4/docs/latex/refman.tex
+++ b/week4/docs/latex/refman.tex
@@ -238,6 +238,8 @@
 \chapter{File Documentation}
 \input{gpio__lib_8h}
 \input{gpio__lib_8h_source}
+\input{led__matrix__lib_8h}
+\input{led__matrix__lib_8h_source}
 %--- End generated contents ---
 % Index
   \backmatter
