--- a/week4/docs/latex/led__matrix__lib_8h_source.tex
+++ b/week4/docs/latex/led__matrix__lib_8h_source.tex
@@ -13,6 +13,21 @@
 \DoxyCodeLine{00015\ }
 \DoxyCodeLine{00016\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{gpio__lib_8h}{gpio\_lib.h}}"{}}}
 \DoxyCodeLine{00017\ }
-\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#define\ MATRIX\_ROWS\ 8}}
+\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#define\ MATRIX\_COLS\ 8}}
+\DoxyCodeLine{00020\ }
+\DoxyCodeLine{00021\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct}\{}
+\DoxyCodeLine{00022\ \ \ \ \ uint16\_t\ port;}
+\DoxyCodeLine{00023\ \ \ \ \ uint16\_t\ bit;}
+\DoxyCodeLine{00024\ \}\ \mbox{\hyperlink{struct_i_o_pin}{IOPin}};}
+\DoxyCodeLine{00025\ }
+\DoxyCodeLine{00026\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct}\{}
+\DoxyCodeLine{00027\ \ \ \ \ \mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ rowPins[MATRIX\_ROWS];}
+\DoxyCodeLine{00028\ \ \ \ \ \mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ colPins[MATRIX\_COLS];}
+\DoxyCodeLine{00029\ \}\ \mbox{\hyperlink{struct_matrix_config}{MatrixConfig}};}
+\DoxyCodeLine{00030\ }
+\DoxyCodeLine{00037\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a211b33717a7cf58af1c76ec8497365e0}{configLEDMatrix}}(\mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ *iolist);}
+\DoxyCodeLine{00038\ }
+\DoxyCodeLine{00039\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
