--- a/week4/docs/latex/refman.tex
+++ b/week4/docs/latex/refman.tex
@@ -233,8 +233,13 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\chapter{Class Index}
+\input{annotated}
 \chapter{File Index}
 \input{files}
+\chapter{Class Documentation}
+\input{struct_i_o_pin}
+\input{struct_matrix_config}
 \chapter{File Documentation}
 \input{gpio__lib_8h}
 \input{gpio__lib_8h_source}
