--- a/week4/docs/latex/led__matrix__lib_8h.tex
+++ b/week4/docs/latex/led__matrix__lib_8h.tex
@@ -24,7 +24,9 @@ struct \mbox{\hyperlink{struct_matrix_config}{Matrix\+Config}}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{led__matrix__lib_8h_a211b33717a7cf58af1c76ec8497365e0}{config\+LEDMatrix}} (\mbox{\hyperlink{struct_i_o_pin}{IOPin}} \texorpdfstring{$\ast$}{*}iolist)
-\begin{DoxyCompactList}\small\item\em Configures the GPIO for the LED-\/\+Matrix. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Configures the GPIO for the LED-\/\+Matrix. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{led__matrix__lib_8h_ae1257054d74d81aa0f999776b29025f7}{set\+Led}} (int row, int col, bool val)
+\begin{DoxyCompactList}\small\item\em Sets a specific LED in the LED-\/\+Matrix. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -48,5 +50,24 @@ Configures the GPIO for the LED-\/\+Matrix.
 This function configures the GPIO for the LED-\/\+Matrix using an iolist. 
 \begin{DoxyParams}[1]{Parameters}
 \mbox{\texttt{in}}  & {\em iolist} & The list of pins used for the LED-\/\+Matrix. \\
+\hline
+\end{DoxyParams}
+\Hypertarget{led__matrix__lib_8h_ae1257054d74d81aa0f999776b29025f7}\index{led\_matrix\_lib.h@{led\_matrix\_lib.h}!setLed@{setLed}}
+\index{setLed@{setLed}!led\_matrix\_lib.h@{led\_matrix\_lib.h}}
+\doxysubsubsection{\texorpdfstring{setLed()}{setLed()}}
+{\footnotesize\ttfamily \label{led__matrix__lib_8h_ae1257054d74d81aa0f999776b29025f7} 
+void set\+Led (\begin{DoxyParamCaption}\item[{int}]{row}{, }\item[{int}]{col}{, }\item[{bool}]{val}{}\end{DoxyParamCaption})}
+
+
+
+Sets a specific LED in the LED-\/\+Matrix. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{in}}  & {\em row} & The row of the LED. \\
+\hline
+\mbox{\texttt{in}}  & {\em col} & The collum of the LED. \\
+\hline
+\mbox{\texttt{in}}  & {\em val} & The value the LED gets. \\
 \hline
 \end{DoxyParams}
