--- a/week4/docs/latex/led__matrix__lib_8h_source.tex
+++ b/week4/docs/latex/led__matrix__lib_8h_source.tex
@@ -28,6 +28,8 @@
 \DoxyCodeLine{00030\ }
 \DoxyCodeLine{00037\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a211b33717a7cf58af1c76ec8497365e0}{configLEDMatrix}}(\mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ *iolist);}
 \DoxyCodeLine{00038\ }
-\DoxyCodeLine{00039\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00047\ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_ae1257054d74d81aa0f999776b29025f7}{setLed}}(\textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col,\ \textcolor{keywordtype}{bool}\ val);}
+\DoxyCodeLine{00048\ }
+\DoxyCodeLine{00049\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
