--- a/week4/docs/latex/led__matrix__lib_8h.tex
+++ b/week4/docs/latex/led__matrix__lib_8h.tex
@@ -28,7 +28,9 @@ void \mbox{\hyperlink{led__matrix__lib_8h_a211b33717a7cf58af1c76ec8497365e0}{con
 void \mbox{\hyperlink{led__matrix__lib_8h_ae1257054d74d81aa0f999776b29025f7}{set\+Led}} (int row, int col, bool val)
 \begin{DoxyCompactList}\small\item\em Sets a specific LED in the LED-\/\+Matrix. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{led__matrix__lib_8h_a7259372716456709bdef9d759ab290f0}{set\+Matrix}} (bool val)
-\begin{DoxyCompactList}\small\item\em Sets the whole LED-\/\+Matrix. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Sets the whole LED-\/\+Matrix. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{led__matrix__lib_8h_ad7419bf0e39e838f7d6908df33e0b1cd}{set\+Led\+Row}} (int row, bool \texorpdfstring{$\ast$}{*}val)
+\begin{DoxyCompactList}\small\item\em Sets a whole row in the LED-\/\+Matrix. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -71,6 +73,23 @@ Sets a specific LED in the LED-\/\+Matrix.
 \mbox{\texttt{in}}  & {\em col} & The collum of the LED. \\
 \hline
 \mbox{\texttt{in}}  & {\em val} & The value the LED gets. \\
+\hline
+\end{DoxyParams}
+\Hypertarget{led__matrix__lib_8h_ad7419bf0e39e838f7d6908df33e0b1cd}\index{led\_matrix\_lib.h@{led\_matrix\_lib.h}!setLedRow@{setLedRow}}
+\index{setLedRow@{setLedRow}!led\_matrix\_lib.h@{led\_matrix\_lib.h}}
+\doxysubsubsection{\texorpdfstring{setLedRow()}{setLedRow()}}
+{\footnotesize\ttfamily \label{led__matrix__lib_8h_ad7419bf0e39e838f7d6908df33e0b1cd} 
+void set\+Led\+Row (\begin{DoxyParamCaption}\item[{int}]{row}{, }\item[{bool \texorpdfstring{$\ast$}{*}}]{val}{}\end{DoxyParamCaption})}
+
+
+
+Sets a whole row in the LED-\/\+Matrix. 
+
+
+\begin{DoxyParams}[1]{Parameters}
+\mbox{\texttt{in}}  & {\em row} & The row to set. \\
+\hline
+\mbox{\texttt{in}}  & {\em val} & The value the row gets. \\
 \hline
 \end{DoxyParams}
 \Hypertarget{led__matrix__lib_8h_a7259372716456709bdef9d759ab290f0}\index{led\_matrix\_lib.h@{led\_matrix\_lib.h}!setMatrix@{setMatrix}}
