--- a/week4/docs/latex/led__matrix__lib_8h_source.tex
+++ b/week4/docs/latex/led__matrix__lib_8h_source.tex
@@ -34,6 +34,8 @@
 \DoxyCodeLine{00056\ }
 \DoxyCodeLine{00064\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_ad7419bf0e39e838f7d6908df33e0b1cd}{setLedRow}}(\textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{bool}\ *val);}
 \DoxyCodeLine{00065\ }
-\DoxyCodeLine{00066\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00073\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a2035109730625cb7ab8e0295720a3a95}{setLedCol}}(\textcolor{keywordtype}{int}\ col,\ \textcolor{keywordtype}{bool}\ *val);}
+\DoxyCodeLine{00074\ }
+\DoxyCodeLine{00075\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
