add iolist and test code to main.c

--- a/week4/docs/latex/led__matrix__lib_8h.tex
+++ b/week4/docs/latex/led__matrix__lib_8h.tex
@@ -32,7 +32,10 @@ void \mbox{\hyperlink{led__matrix__lib_8h_a7259372716456709bdef9d759ab290f0}{set
 void \mbox{\hyperlink{led__matrix__lib_8h_ad7419bf0e39e838f7d6908df33e0b1cd}{set\+Led\+Row}} (int row, bool \texorpdfstring{$\ast$}{*}val)
 \begin{DoxyCompactList}\small\item\em Sets a whole row in the LED-\/\+Matrix. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{led__matrix__lib_8h_a2035109730625cb7ab8e0295720a3a95}{set\+Led\+Col}} (int col, bool \texorpdfstring{$\ast$}{*}val)
-\begin{DoxyCompactList}\small\item\em Sets a whole collum in the LED-\/\+Matrix. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Sets a whole collum in the LED-\/\+Matrix. \end{DoxyCompactList}\item 
+\Hypertarget{led__matrix__lib_8h_a1567439c0309d3c8b546e630cae5ea9e}\label{led__matrix__lib_8h_a1567439c0309d3c8b546e630cae5ea9e} 
+void {\bfseries refresh\+Matrix} (void)
+\begin{DoxyCompactList}\small\item\em Refreshes the LED-\/\+Matrix using Muliplexing. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
