add function to configure GPIO for button matrix

--- a/week4/docs/latex/refman.tex
+++ b/week4/docs/latex/refman.tex
@@ -241,6 +241,8 @@
 \input{struct_i_o_pin}
 \input{struct_matrix_config}
 \chapter{File Documentation}
+\input{button__matrix__lib_8h}
+\input{button__matrix__lib_8h_source}
 \input{gpio__lib_8h}
 \input{gpio__lib_8h_source}
 \input{led__matrix__lib_8h}
