--- a/week4/docs/latex/led__matrix__lib_8h.tex
+++ b/week4/docs/latex/led__matrix__lib_8h.tex
@@ -3,6 +3,7 @@
 {\ttfamily \#include $<$msp430.\+h$>$}\newline
 {\ttfamily \#include $<$stdint.\+h$>$}\newline
 {\ttfamily \#include $<$stdbool.\+h$>$}\newline
+{\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include "{}gpio\+\_\+lib.\+h"{}}\newline
 \doxysubsubsection*{Classes}
 \begin{DoxyCompactItemize}
