--- a/week4/docs/latex/led__matrix__lib_8h_source.tex
+++ b/week4/docs/latex/led__matrix__lib_8h_source.tex
@@ -8,36 +8,38 @@
 \DoxyCodeLine{00010\ \textcolor{preprocessor}{\#define\ LED\_MATRIX\_LIB\_H}}
 \DoxyCodeLine{00011\ }
 \DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ <msp430.h>}}
-\DoxyCodeLine{00013\ \textcolor{preprocessor}{\#include\ <stdint.h>}}
-\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ <stdbool.h>}}
-\DoxyCodeLine{00015\ }
-\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{gpio__lib_8h}{gpio\_lib.h}}"{}}}
+\DoxyCodeLine{00013\ }
+\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ <stdint.h>}}
+\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#include\ <stdbool.h>}}
+\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#include\ <stdio.h>}}
 \DoxyCodeLine{00017\ }
-\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#define\ MATRIX\_ROWS\ 8}}
-\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#define\ MATRIX\_COLS\ 8}}
-\DoxyCodeLine{00020\ }
-\DoxyCodeLine{00021\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct}\{}
-\DoxyCodeLine{00022\ \ \ \ \ uint16\_t\ port;}
-\DoxyCodeLine{00023\ \ \ \ \ uint16\_t\ bit;}
-\DoxyCodeLine{00024\ \}\ \mbox{\hyperlink{struct_i_o_pin}{IOPin}};}
-\DoxyCodeLine{00025\ }
-\DoxyCodeLine{00026\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct}\{}
-\DoxyCodeLine{00027\ \ \ \ \ \mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ rowPins[MATRIX\_ROWS];}
-\DoxyCodeLine{00028\ \ \ \ \ \mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ colPins[MATRIX\_COLS];}
-\DoxyCodeLine{00029\ \}\ \mbox{\hyperlink{struct_matrix_config}{MatrixConfig}};}
-\DoxyCodeLine{00030\ }
-\DoxyCodeLine{00037\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a211b33717a7cf58af1c76ec8497365e0}{configLEDMatrix}}(\mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ *iolist);}
-\DoxyCodeLine{00038\ }
-\DoxyCodeLine{00047\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_ae1257054d74d81aa0f999776b29025f7}{setLed}}(\textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col,\ \textcolor{keywordtype}{bool}\ val);}
-\DoxyCodeLine{00048\ }
-\DoxyCodeLine{00055\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a7259372716456709bdef9d759ab290f0}{setMatrix}}(\textcolor{keywordtype}{bool}\ val);}
-\DoxyCodeLine{00056\ }
-\DoxyCodeLine{00064\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_ad7419bf0e39e838f7d6908df33e0b1cd}{setLedRow}}(\textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{bool}\ *val);}
-\DoxyCodeLine{00065\ }
-\DoxyCodeLine{00073\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a2035109730625cb7ab8e0295720a3a95}{setLedCol}}(\textcolor{keywordtype}{int}\ col,\ \textcolor{keywordtype}{bool}\ *val);}
-\DoxyCodeLine{00074\ }
-\DoxyCodeLine{00080\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a1567439c0309d3c8b546e630cae5ea9e}{refreshMatrix}}(\textcolor{keywordtype}{void});}
-\DoxyCodeLine{00081\ }
-\DoxyCodeLine{00082\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{gpio__lib_8h}{gpio\_lib.h}}"{}}}
+\DoxyCodeLine{00019\ }
+\DoxyCodeLine{00020\ \textcolor{preprocessor}{\#define\ MATRIX\_ROWS\ 8}}
+\DoxyCodeLine{00021\ \textcolor{preprocessor}{\#define\ MATRIX\_COLS\ 8}}
+\DoxyCodeLine{00022\ }
+\DoxyCodeLine{00023\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct}\{}
+\DoxyCodeLine{00024\ \ \ \ \ uint16\_t\ port;}
+\DoxyCodeLine{00025\ \ \ \ \ uint16\_t\ bit;}
+\DoxyCodeLine{00026\ \}\ \mbox{\hyperlink{struct_i_o_pin}{IOPin}};}
+\DoxyCodeLine{00027\ }
+\DoxyCodeLine{00028\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct}\{}
+\DoxyCodeLine{00029\ \ \ \ \ \mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ rowPins[MATRIX\_ROWS];}
+\DoxyCodeLine{00030\ \ \ \ \ \mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ colPins[MATRIX\_COLS];}
+\DoxyCodeLine{00031\ \}\ \mbox{\hyperlink{struct_matrix_config}{MatrixConfig}};}
+\DoxyCodeLine{00032\ }
+\DoxyCodeLine{00039\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a211b33717a7cf58af1c76ec8497365e0}{configLEDMatrix}}(\mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ *iolist);}
+\DoxyCodeLine{00040\ }
+\DoxyCodeLine{00049\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_ae1257054d74d81aa0f999776b29025f7}{setLed}}(\textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{int}\ col,\ \textcolor{keywordtype}{bool}\ val);}
+\DoxyCodeLine{00050\ }
+\DoxyCodeLine{00057\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a7259372716456709bdef9d759ab290f0}{setMatrix}}(\textcolor{keywordtype}{bool}\ val);}
+\DoxyCodeLine{00058\ }
+\DoxyCodeLine{00066\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_ad7419bf0e39e838f7d6908df33e0b1cd}{setLedRow}}(\textcolor{keywordtype}{int}\ row,\ \textcolor{keywordtype}{bool}\ *val);}
+\DoxyCodeLine{00067\ }
+\DoxyCodeLine{00075\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a2035109730625cb7ab8e0295720a3a95}{setLedCol}}(\textcolor{keywordtype}{int}\ col,\ \textcolor{keywordtype}{bool}\ *val);}
+\DoxyCodeLine{00076\ }
+\DoxyCodeLine{00082\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{led__matrix__lib_8h_a1567439c0309d3c8b546e630cae5ea9e}{refreshMatrix}}(\textcolor{keywordtype}{void});}
+\DoxyCodeLine{00083\ }
+\DoxyCodeLine{00084\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ LED\_MATRIX\_LIB\_H\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
