--- a/week4/docs/latex/button__matrix__lib_8h_source.tex
+++ b/week4/docs/latex/button__matrix__lib_8h_source.tex
@@ -19,8 +19,11 @@
 \DoxyCodeLine{00021\ \textcolor{preprocessor}{\#define\ B\_MATRIX\_ROWS\ 4}}
 \DoxyCodeLine{00022\ \textcolor{preprocessor}{\#define\ B\_MATRIX\_COLS\ 4}}
 \DoxyCodeLine{00023\ }
-\DoxyCodeLine{00030\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{button__matrix__lib_8h_a1cc8a23f1ef215eb861905828a0eb5c1}{configButtonMatrix}}(\mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ *iolist);}
-\DoxyCodeLine{00031\ }
-\DoxyCodeLine{00032\ \textcolor{preprocessor}{\ \#endif\ }\textcolor{comment}{/*\ BUTTON\_MATRIX\_LIB\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00024\ }
+\DoxyCodeLine{00031\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{button__matrix__lib_8h_a1cc8a23f1ef215eb861905828a0eb5c1}{configButtonMatrix}}(\mbox{\hyperlink{struct_i_o_pin}{IOPin}}\ *iolist);}
+\DoxyCodeLine{00032\ }
+\DoxyCodeLine{00039\ \ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{button__matrix__lib_8h_a9e0f2167c9fdee5c6af27ac11fd72c01}{getButton}}(\textcolor{keywordtype}{void});}
+\DoxyCodeLine{00040\ }
+\DoxyCodeLine{00041\ \textcolor{preprocessor}{\ \#endif\ }\textcolor{comment}{/*\ BUTTON\_MATRIX\_LIB\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
